Fixed overflowing header for sensorBox

--- a/control-station/src/Components/mainBody/sensorsContainer/sensorBoxes/sensorBox.css
+++ b/control-station/src/Components/mainBody/sensorsContainer/sensorBoxes/sensorBox.css
@@ -4,15 +4,9 @@
   height: 30%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: white;
   border-radius: 25px;
   margin: 5px;
-}
-
-.sensorBox > h2 {
-  font-size: 1.5rem;
-  position: absolute;
-  top: 10px;
 }
